test/neg/neg-serial8.errc
Arguments to UPCXX_SERIALIZED_FIELDS cannot be const.
